--- a/Banking/Banking/Bank.csproj
+++ b/Banking/Banking/Bank.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Currency.cs" />
     <Compile Include="AccountEventArgs .cs" />
+    <Compile Include="ClientInfo.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="TransactionType.cs" />
     <Compile Include="AccountType.cs" />
